apps/canfar/base/cavern/custom-cavern-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cavern-ingress
  namespace: skaha-system
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: canfar.ral.uksrc.org
    http:
      paths:
      - path: /cavern
        pathType: Prefix
        backend:
          service:
            name: cavern-tomcat-svc
            port:
              number: 8080
